@@ -71,13 +71,13 @@ module ActiveMerchant #:nodoc:
         super
       end
 
-      def authorize(money, creditcard, options = {})
-        to_pass = create_credit_card_hash(money, creditcard, options)
+      def authorize(money, creditcard_or_token, options = {})
+        to_pass = build_authorize_request(money, creditcard_or_token, options)
         build_response(:authorization, @litle.authorization(to_pass))
       end
 
-      def purchase(money, creditcard, options = {})
-        to_pass = create_credit_card_hash(money, creditcard, options)
+      def purchase(money, creditcard_or_token, options = {})
+        to_pass = build_purchase_request(money, creditcard_or_token, options)
         build_response(:sale, @litle.sale(to_pass))
       end
 
@@ -98,7 +98,7 @@ module ActiveMerchant #:nodoc:
 
       def store(creditcard, options = {})
         to_pass = create_token_hash(creditcard, options)
-        build_response(:registerToken, @litle.register_token_request(to_pass), %w(801 802))
+        build_response(:registerToken, @litle.register_token_request(to_pass), %w(000 801 802))
       end
 
       private
@@ -142,11 +142,17 @@ module ActiveMerchant #:nodoc:
         if response['response'] == "0"
           detail = response["#{kind}Response"]
           fraud = fraud_result(detail)
+          authorization = case kind
+          when :registerToken
+            response['registerTokenResponse']['litleToken']
+          else
+            detail['litleTxnId']
+          end
           Response.new(
             valid_responses.include?(detail['response']),
             detail['message'],
             {:litleOnlineResponse => response},
-            :authorization => detail['litleTxnId'],
+            :authorization => authorization,
             :avs_result => {:code => fraud['avs']},
             :cvv_result => fraud['cvv'],
             :test => test?
@@ -156,27 +162,52 @@ module ActiveMerchant #:nodoc:
         end
       end
 
-      def create_credit_card_hash(money, creditcard, options)
-        cc_type = CARD_TYPE[creditcard.brand]
+      def build_authorize_request(money, creditcard_or_token, options)
+        hash = create_hash(money, options)
 
-        exp_date_yr = creditcard.year.to_s()[2..3]
+        add_credit_card_or_token_hash(hash, creditcard_or_token)
 
-        if( creditcard.month.to_s().length == 1 )
-          exp_date_mo = '0' + creditcard.month.to_s()
+        hash
+      end
+
+      def build_purchase_request(money, creditcard_or_token, options)
+        hash = create_hash(money, options)
+
+        add_credit_card_or_token_hash(hash, creditcard_or_token)
+
+        hash
+      end
+
+      def add_credit_card_or_token_hash(hash, creditcard_or_token)
+        if creditcard_or_token.is_a?(String)
+          add_token_hash(hash, creditcard_or_token)
         else
-          exp_date_mo = creditcard.month.to_s()
+          add_credit_card_hash(hash, creditcard_or_token)
         end
+      end
 
-        exp_date = exp_date_mo + exp_date_yr
-
-        card_info = {
-          'type' => cc_type,
-          'number' => creditcard.number,
-          'expDate' => exp_date,
-          'cardValidationNum' => creditcard.verification_value
+      def add_token_hash(hash, creditcard_or_token)
+        token_info = {
+            'litleToken' => creditcard_or_token
         }
 
-        hash = create_hash(money, options)
+        hash['token'] = token_info
+        hash
+      end
+
+      def add_credit_card_hash(hash, creditcard)
+        cc_type     = CARD_TYPE[creditcard.brand]
+        exp_date_yr = creditcard.year.to_s[2..3]
+        exp_date_mo = '%02d' % creditcard.month.to_i
+        exp_date    = exp_date_mo + exp_date_yr
+
+        card_info = {
+            'type'              => cc_type,
+            'number'            => creditcard.number,
+            'expDate'           => exp_date,
+            'cardValidationNum' => creditcard.verification_value
+        }
+
         hash['card'] = card_info
         hash
       end
